# osp

./: LICENSE  README.md
a-story-as-you-like-it/: README.md  app.py  narrative_data.py  pyproject.toml  templates.py  un-conte.json  x.html
a-story-as-you-like-it-but-rust/: Cargo.toml  un-conte.json
a-story-as-you-like-it-but-rust/src/: main.rs  story.rs
a-story-as-you-like-it-but-rust/static/: style.css
a-story-as-you-like-it-but-rust/templates/: index.html.tera  story.html.tera
a-story-as-you-like-it/css/: style.css.map  style.scss
taper-12/: filters-expanded.html  filters.html
taper-8/: elfanbaum_bits.html
taper-8/src/: script.ts  styles.scss
