[package]
name = "a-story-as-you-like-it-but-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"

[dependencies.rocket]
version = "0.5.1"
features = ["json"]

[dependencies.rocket_dyn_templates]
version = "0.2.0"
features = ["tera"]
